<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BusinessActivity"
    android:orientation="vertical">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/businessname"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text="@string/enterbusinessnameregistred"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvbusinessSmall"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:text="@string/enterbusinessname"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvBusinessbig"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/DarkerGray"
        android:text="@string/enterbusinessname"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etbusinessName"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvStoreSmall"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:text="Unique Store name"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvSoreBig"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/DarkerGray"
        android:text="Unique Store name"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etstoreName"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:padding="@dimen/dp_10"
        android:id="@+id/btnSave"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/save"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>