<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MenuColor"
    tools:context=".Activities.TypesofProductsActivity">
    <ImageView
        android:id="@+id/backArrowtype"
        android:src="@drawable/ic_backarrow"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="50dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvtypeofProduct"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        style="@style/MyStyletype"
        android:text="@string/whatproductsdoyoucell"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_below="@+id/backArrowtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/layoutwhte_bg"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_below="@id/tvtypeofProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/sp_15"
            android:id="@+id/tvmultipleproducts"
            android:layout_margin="@dimen/dp_20"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/selectMultiple"
            android:layout_below="@+id/backArrowtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="280dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="440dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:id="@+id/btnaddProduct"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>