<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmets.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/MenuColor"
        android:id="@+id/rlayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/whiteColor"
        android:id="@+id/cardview"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/sharelink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/discription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/MenuColor"
                android:text="@string/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
               <LinearLayout
                   android:id="@+id/btnshare"
                   android:orientation="horizontal"
                   android:background="@drawable/green_rectangle"
                   android:layout_width="wrap_content"
                   android:layout_height="@dimen/dp_30">
               <ImageView
                   android:layout_marginTop="5dp"
                   android:layout_marginRight="2dp"
                   android:layout_marginLeft="20dp"
                   android:src="@drawable/ic_app"
                   android:layout_width="20dp"
                   android:layout_height="20dp"/>
                   <TextView
                       android:layout_marginTop="5dp"
                       android:layout_marginRight="20dp"
                       android:layout_marginLeft="5dp"
                       android:textColor="@android:color/white"
                       android:textStyle="bold"
                       android:text="Share"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
               </LinearLayout>
           </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_below="@+id/cardview"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/relativeoverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvoverview"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/overView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:paddingStart="@dimen/dp_40"
                    android:layout_marginLeft="240dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/timeSpinner"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/llayout"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_below="@+id/relativeoverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/whiteColor"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:layout_width="180dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="100dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                        android:textSize="15sp"
                        android:id="@+id/tvorder"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:text="@string/orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_below="@+id/tvorder"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/whiteColor"
                    android:layout_marginLeft="10dp"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:layout_width="180dp"
                    android:layout_height="100dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="15sp"
                            android:id="@+id/tvrevenue"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="@string/revenue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_below="@+id/tvrevenue"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llayout1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_below="@+id/llayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/whiteColor"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:layout_width="180dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="100dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="15sp"
                            android:id="@+id/tvstore"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="@string/storeviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_below="@+id/tvstore"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/whiteColor"
                    android:layout_marginLeft="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:layout_width="180dp"
                    android:layout_height="100dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="15sp"
                            android:id="@+id/product"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="PRODUCT COUNT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/productcount"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_below="@+id/product"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/rlayout2"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_below="@id/llayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvactive"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/activeorders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="280dp"
                    android:id="@+id/tvviewall"
                    android:textColor="@android:color/black"
                    android:text="@string/viewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/nextbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="290dp"
                    android:paddingStart="@dimen/dp_40"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlayout3"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_below="@id/rlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:textAllCaps="false"
                    android:background="@drawable/selected_button"
                    android:id="@+id/btnall"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="All"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>
                <Button
                    android:textAllCaps="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_100"
                    android:background="@drawable/buttonselector"
                    android:id="@+id/btnpending"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="Pending"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>
                <Button
                    android:textAllCaps="false"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:layout_marginLeft="200dp"
                    android:background="@drawable/buttonselector"
                    android:id="@+id/btnpaccepted"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="Accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@color/whiteColor"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_below="@id/rlayout3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80">
                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:text="@string/youdonot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>