<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StoreProfile">
    <TextView
        android:id="@+id/tvcongrats"
        android:textSize="@dimen/sp_15"
        android:textColor="@android:color/black"
        android:text="@string/congratulations"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/ivtick"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_below="@id/tvcongrats"
        android:src="@drawable/ic_tick"
        android:background="@drawable/greenround_bg"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"/>
    <TextView
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_below="@+id/tvcongrats"
        android:id="@+id/tvyourStorecreated"
        android:textSize="23sp"
        android:textColor="@android:color/black"
        android:text="@string/yourStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/whiteColor"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_margin="@dimen/dp_20"
        android:layout_below="@+id/ivtick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:id="@+id/ivprofileimage"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center"
                android:layout_below="@+id/tvmybusinessname"
                android:id="@+id/tvmystorename"
                android:textSize="23sp"
                android:textColor="@android:color/black"
                android:text="@string/yourStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvproduct1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvcongrats"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/yourStore"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center"
                android:layout_below="@+id/tvcongrats"
                android:id="@+id/tvproductlink"
                android:textSize="15sp"
                android:textColor="@color/BlueColor"
                android:text="@string/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/green_rectangle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20">
                <TextView
                    android:paddingTop="5dp"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="5dp"
                    android:text="Preview"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:id="@+id/btnproductaddActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/button_bg"
        android:padding="@dimen/dp_10"
        android:text="Let's Add Products now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>